# aigc-proof

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  PROJECT_STATE.md  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml
apps/desktop/: .gitignore  .prettierignore  README.txt  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.main.json  tsconfig.preload.json  tsconfig.qa.json  tsconfig.renderer.json  tsconfig.utility.json  vite.config.ts  vitest.config.ts
apps/desktop/qa/: cdp.ts  package-boundary.ts  workbench-smoke.ts
apps/desktop/scripts/: build-native.ps1  package-workbench.ps1  run-packaged-qa.ps1  verify-packaged-workbench.ps1
apps/desktop/src/main/: app-state.test.ts  app-state.ts  authority.test.ts  authority.ts  comfyui-supervisor.ts  creation-scope.test.ts  creation-scope.ts  ipc.ts  job-scheduler.test.ts  job-scheduler.ts  main.ts  native-contract.test.ts  native-contract.ts  native.ts  qa-selections.test.ts  qa-selections.ts  security.test.ts  security.ts  tsa-transport.test.ts  tsa-transport.ts  utility-supervisor.test.ts  utility-supervisor.ts  workspace-path.test.ts  workspace-path.ts
apps/desktop/src/preload/: preload-source.test.ts  preload.ts
apps/desktop/src/renderer/: App.test.tsx  App.tsx  boundary.test.ts  index.html  mock-host.test.ts  mock-host.ts  standalone-host.ts  styles.css
apps/desktop/src/shared/: channels.ts  contracts.ts  schemas.test.ts  schemas.ts  utility-protocol.test.ts  utility-protocol.ts
apps/desktop/src/utility/: native.ts  utility.ts
crates/proof-cli/: Cargo.toml
crates/proof-cli/src/: main.rs
crates/proof-cli/tests/: cli_workflow.rs
crates/proof-core/: Cargo.toml
crates/proof-core/src/: asset_match.rs  c2pa_bridge.rs  error.rs  event_chain.rs  hash.rs  lib.rs  official_attestation.rs  package.rs  signing.rs  timestamp.rs  timestamp_package.rs  verify.rs  workspace.rs
crates/proof-core/tests/: c2pa_bridge.rs  creator_signature.rs  image_correspondence.rs  official_identity.rs  os_signer_store.rs  package_security.rs  test_vectors.rs  trusted_time.rs
crates/proof-desktop/: Cargo.toml  README.txt
crates/proof-desktop/src/: logic.rs  main.rs  windows_app.rs
crates/proof-napi/: Cargo.toml
crates/proof-napi/src/: app_state.rs  lib.rs
crates/proof-schema/: Cargo.toml
crates/proof-schema/src/: lib.rs  model.rs  schema.rs  strict_json.rs  validation.rs
docs/: AIGC-PROOF-SPEC.md  ARCHITECTURE.md  ASSURANCE-LEVELS.md  C2PA-BRIDGE.md  CLI.md  COMPATIBILITY.md  CONFORMANCE-MANIFEST.json  DESKTOP-PREVIEW.md  DESKTOP-WORKBENCH.md  DEVELOPMENT.md  INTEGRATION-SYNC.md  OFFICIAL-IDENTITY-PROFILE.md  PACKAGE-FORMAT.md  PRIVACY-PROFILE.md  RIGHTS-PROTECTION-ROADMAP.md  ROADMAP.md  SIGNATURE-PROFILE.md  THREAT-MODEL.md  TRUSTED-TIME-PROFILE.md
docs/adr/: 0001-electron-workbench.md  0002-supervised-utility-jobs.md  0003-local-creation-to-proof.md  0004-image-proof-correspondence.md
schemas/v0.1/: event.schema.json  manifest.schema.json  verification-result.schema.json
schemas/v0.2/: event.schema.json  manifest.schema.json  verification-result.schema.json  workspace.schema.json
schemas/v0.3/: manifest.schema.json  verification-result.schema.json  workspace.schema.json
schemas/v0.4/: manifest.schema.json  tsa-profile.schema.json  verification-result.schema.json  workspace.schema.json
schemas/v0.5/: c2pa-trust-profile.schema.json  manifest.schema.json  verification-result.schema.json  workspace.schema.json
schemas/v1.0/: manifest.schema.json  official-attestation-v1.schema.json  official-issuer-trust-v1.schema.json  official-status-snapshot-v1.schema.json  verification-result.schema.json  workspace.schema.json
scripts/: build.ps1  desktop-ui-smoke.ps1  package-desktop.ps1  smoke-test.ps1  smoke-test.sh  test.ps1  test.sh  verify-creator-signature-vector.py
tests/test-vectors/: README.md
tests/test-vectors/canonical-json/: README.md  expected-sha256.txt  expected.jcs.json  rfc8785-input.json  rfc8785-sorting-expected.jcs.json  rfc8785-sorting-input.json
tests/test-vectors/creator-signature/: ed25519-cose-sign1.json
tests/test-vectors/event-chain/: README.md  expected-event-hash.txt  expected-hash-input.jcs.json  input-event-without-hash.json
tests/test-vectors/hashes/: README.md
tests/vectors/official-identity/: ap034-attestation.cose.b64  ap034-status.cose.b64  ap034-trust.json  independent-attestation.cose.b64  independent-status.cose.b64  independent-trust.json  manifest.json
