[workspace]
resolver = "2"
members = [
    "crates/proof-core",
    "crates/proof-schema",
    "crates/proof-cli",
    "crates/proof-napi",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/RZSchool/aigc-proof"
rust-version = "1.85"

[workspace.dependencies]
clap = { version = "=4.5.27", features = ["derive"] }
jsonschema = { version = "=0.29.1", default-features = false }
serde = { version = "=1.0.217", features = ["derive"] }
serde_json = "=1.0.138"
serde_json_canonicalizer = "=0.3.2"
sha2 = "=0.10.8"
tempfile = "=3.15.0"
time = { version = "=0.3.36", features = ["formatting", "parsing"] }
uuid = { version = "=1.12.1", features = ["v4"] }
zip = { version = "=2.4.2", default-features = false, features = ["deflate"] }
