[package]
name = "proof-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
clap.workspace = true
proof-core = { path = "../proof-core" }
proof-schema = { path = "../proof-schema" }
serde_json.workspace = true
tempfile.workspace = true
uuid.workspace = true

[[bin]]
name = "aigc-proof"
path = "src/main.rs"

[dev-dependencies]
zip.workspace = true
