[package]
name = "proof-napi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "=2.16.17", default-features = false, features = ["napi8"] }
napi-derive = "=2.16.13"
proof-core = { path = "../proof-core" }
proof-schema = { path = "../proof-schema" }
rusqlite = { version = "=0.32.1", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[build-dependencies]
napi-build = "=2.1.3"

[dev-dependencies]
tempfile.workspace = true
zip.workspace = true
